tdf#141050 Accept CCur with negative strings

the ImpStringToCurrency now increment the pointer on finding a '+' or '-' in sbxcurr.cxx file

Change-Id: I4a1093ae0b4e52b6a61dc412bd5e7b95b1309e7a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112734
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 54b3ada2e5ef9dcbc452509a7bbe39f0920572e2)